fix: top bar spacing and entering

--- a/styles.css
+++ b/styles.css
@@ -240,15 +240,15 @@
     align-items: center;
     height: 100%;
   }
-  #families-monster-skill-list {
+  /* #families-monster-skill-list {
     display: flex;
-    flex-direction: column; /* Stack items vertically */
-    /* align-items: center; Center-align the content */
+    flex-direction: column; /* Stack items vertically
+    
     gap: 10px;
-    text-align: center; /* Center text */
+    text-align: center;
     align-items: center;
-    height: 100%;
-  }
+    height: 100%; 
+  }*/
   #families-stat-table {
     flex: 1;
     width: 75%; /* Make the table span the container width */
